# VideoTools-Front_end

./: app.py  create_db.py  index.py  makefile  pyproject.toml
flaskvue/: package-lock.json  package.json  types.ts
flaskvue/services/: videosApi.ts
flaskvue/src/: App.vue  main.ts
flaskvue/src/components/: AdicionarVideo.vue  ListaVideos.vue  Navbar.vue
instance/: database.db
