[tool.poetry]
name = "flask_training"
version = "0.1.0"
description = "I1m Trainning Flask"
authors = ["Leonardo Bezerra <leosoares.bezerra2017@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
Flask-SQLAlchemy = "^3.1.1"
Flask-Cors = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
